InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyWithdrawalSurrenderLoan__c/vlocity_ins__PolicyWithdrawalSurrenderLoan__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Represents funds distribution information about an insurance policy such as loans, withdrawals or voluntary termination. Master-detail child object of Policy (deprecated).</description>
    <label>Withdrawal, Surrender, &amp; Loan</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withdrawals, Surrenders, &amp; Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>