InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyWithdrawalSurrenderLoan__c/fields/vlocity_ins__PolicyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyId__c</fullName>
    <label>Policy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_ins__Policy__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndividualLife</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ins__Policy__c</referenceTo>
    <relationshipName>Withdrawals_and_Surrenders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>