InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyWithdrawalSurrenderLoan__c/fields/vlocity_ins__SubType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SubType__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Premium Loan</fullName>
            </value>
            <value>
                <fullName>Dividends on Deposit Withdrawal</fullName>
            </value>
            <value>
                <fullName>Full Liquidation</fullName>
            </value>
            <value>
                <fullName>Interest Only, Surrender-Free Amount Withdrawal</fullName>
            </value>
            <value>
                <fullName>Interest Only / Gain Only Withdrawal</fullName>
            </value>
            <value>
                <fullName>Non Preferred Standard Loan</fullName>
            </value>
            <value>
                <fullName>One Year Term Partial</fullName>
            </value>
            <value>
                <fullName>Paid - Up Additions Partial Surrender</fullName>
            </value>
            <value>
                <fullName>Preferred Loan</fullName>
            </value>
            <value>
                <fullName>Required Minimum Distribution</fullName>
            </value>
            <value>
                <fullName>Specified Amount Withdrawal</fullName>
            </value>
            <value>
                <fullName>Substantially Equal Payments</fullName>
            </value>
            <value>
                <fullName>Surrender Free Withdrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>