InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyWithdrawalSurrenderLoan__c/fields/vlocity_ins__WithdrawalSurrenderDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__WithdrawalSurrenderDate__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>