InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyWithdrawalSurrenderLoan__c/fields/vlocity_ins__WithholdingTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__WithholdingTaxAmount__c</fullName>
    <label>Withholding Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>